# Into-LLM-Reasoning-

./: .gitignore  README.md  ds_config.json  pyproject.toml  readme_ita.md
GMS8K_logic/: build_dataset.py  dataset_utils.py  model.py
GMS8K_logic/rlvr_pipeline/: rewards_utils.py  train_rlvr.py
GMS8K_logic/sftt_pipeline/: train_sftt.py
MATH_logic/dataset_utils/: dataset_formatting.py  dataset_splitting.py
MATH_logic/eval_pipeline/: eval_ood.py  generation.py  metric.py
MATH_logic/rlvr_pipeline/: rewards_utils.py  train_rlvr.py
MATH_logic/sftt_pipeline/: train_sftt.py
analysis/: activation_view.py  build_proibing_dataset.py  extract_activation.py  generation.py  organize_activation.py
data/: ood_eval_dataset.jsonl  ood_eval_dataset_metadata.json
doc/: experiments.md
experiments/: act_dataset_utils.py  experiments_conf.py  experiments_main.py  experiments_utils.py  run_cka.py  run_linear_probing.py  tok_dataset_utils.py
experiments/CKA/: cka_utils.py  compute_cka.py  run_cka.py
experiments/Logit_Lens/: get_lens.py  lens_metrics.py  lens_metrics_derived.py  lens_plot.py  lens_run.py  lens_utils.py  metrics.py
experiments/Logit_Lens/outputs/: lens_out_native_shared-rlvr.pt
experiments/activation_patching/: patch_plot.py  patching_metrics.py  patching_run.py  pathcing_utils.py
models/: model.py  model_wrapper.py  rope_theta.py
