[project]
name = "llm-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "transformer-lens>=2.16.1",
    "transformers>=5.5.0",
    "trl>=1.0.0",
    "wandb>=0.25.1",
]
