[project]
name = "llm-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "deepspeed>=0.18.9",
    "flash-attn>=2.8.3",
    "h5py>=3.16.0",
    "liger-kernel>=0.7.0",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "mpi4py>=4.1.1",
    "ninja>=1.13.0",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
    "vllm>=0.11.0",
    "wandb>=0.25.1",
]
